# obsidian-publisher

./: .gitattributes  .gitignore  LICENSE  README.md  test-upload.bat  test-upload.sh
.github/workflows/: docker.yml
cli/: .gitignore  package.json  pnpm-lock.yaml  rollup.config.mjs  run-press-debug.sh  tsconfig.json  vitest.config.js
cli/src/: auth.ts  builder.ts  index-page.ts  index.ts  lib.ts  packer.ts  plugin-obsidian.ts  site-structure.ts  uploader.ts
cli/src/commands/: archive.ts  build.ts  publish.ts  upload.ts
cli/src/siteconfig/: config.js  mdit-obsidian.min.mjs  plugin-obsidian.js
cli/src/utils/: fs.ts  logger.ts  vitepress-setup.ts
cli/test/: builder-integration.test.ts  logger.test.ts
cli/tests/markdown-it/: plugin-obsidian.test.js
mdit/: .npmignore  README.md  copy-to-cli.bat  esbuild-bundle.mjs  esbuild-css.mjs  package.json  pnpm-lock.yaml  tsconfig.json  verify-build.mjs
mdit/src/: index.ts
mdit/src/plugins/: embed.ts  tags.ts  wikilink.ts
mdit/src/preprocessor/: index.ts
mdit/src/utils/: linkResolver.ts  parseWikiLink.ts
mdit/tests/integration/: full-pipeline.test.ts  integration.test.ts
mdit/tests/parseWikiLink/: parseWikiLink.test.ts
mdit/tests/plugins/: tags-comprehensive.test.ts  tags.test.ts  wikilink-comprehensive.test.ts  wikilink.test.ts
mdit/tests/preprocessor/: preprocessor.test.ts
mdit/tests/utils/: linkResolver.test.ts
publisher/: .gitignore  esbuild.config.dev.mjs  esbuild.config.mjs  main.ts  manifest.json  package.json  pnpm-lock.yaml  styles.css  tsconfig.json
publisher/src/: commands.ts  settings.ts  types.ts
publisher/src/ui/: PublishModal.ts  SettingTab.ts  StatusBar.ts
publisher/src/utils/: logger.ts  loggerAdapter.ts
scripts/docker/: docker-compose.debug.yml  docker-compose.orm.yml  docker-compose.sled.yml
server/: .gitignore  Cargo.toml  Dockerfile  README.md  config.json  docker-compose.yml
server/src/: config.rs  error.rs  lib.rs  main.rs  models.rs
server/src/auth/: extractors.rs  middleware.rs  mod.rs  service.rs  token.rs
server/src/handlers/: admin.rs  auth.rs  mod.rs  sites.rs  users.rs
server/src/sites/: site_service.rs
server/src/storage/: algorithms-spec.md  debug.rs  mod.rs  site_storage.rs  user_storage.rs
server/src/storage/orm/: mod.rs  site_storage.rs  user_storage.rs
server/src/storage/orm/entities/: mod.rs  sites.rs  users.rs
server/src/storage/sled/: dbs.rs  mod.rs  site_storage.rs  user_storage.rs
server/src/utils/: archive.rs  mod.rs  parse_args.rs  secrets.rs
server/tests/: archive_integration.rs  sites_handler_tests.rs  storage_tests.rs
server/tests/utils/: mod.rs  storage.rs
tests/adminpage/: README.md  index.html  server.js
tests/hurl/: admin-all.hurl  delete-account.hurl  halzi-login.hurl  halzi-register.hurl  list-sites.hurl  login.hurl  readme.txt  register.hurl  upload-delete.hurl  upload.hurl  upload.js
webui/: .gitignore  index.html  package.json  pnpm-lock.yaml
webui/src/: App.vue  DemoApp.vue  demo.config.ts  main.ts  style.css
webui/src/api/: auth.ts  index.ts  types.ts  user.ts
webui/src/components/: AuthForm.vue  Avatar.vue  GitHubLink.vue  ListDisplay.vue  NavMenu.vue  RadialMenu.vue  TextCard.vue  (+2 more)
webui/tests/: api.test.ts
(+12 files in other folders)
