[package]
name = "obsidian-publisher-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web框架
axum = { version = "0.8.6", features = ["multipart", "macros"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace"] }

# 序列化
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# 日志
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# 文件处理 数据库
flate2 = "1.1.2"
tar = "0.4.44"
zip = "5.1.1"
sled = "0.34.7"

# 认证
bcrypt = "0.15"
jsonwebtoken = "9.0"

# 工具库
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
thiserror = "2.0.17"
async-trait = "0.1.89"
